--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@midudev/tailwind-animations": "^0.0.7",
     "flowbite": "^2.3.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
